# lerim

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml  vulture_whitelist.py
.github/workflows/: ci.yml  docs.yml  publish.yml
assets/: README.md
baml_agents/: README.md
baml_agents/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_agents/baml_extract_agent/: __init__.py  graph.py  run.py  tool_bridge.py
baml_agents/baml_src/: extract_react.baml  extract_react_tests.baml  generators.baml  models.baml
benchmarks/: README.md
benchmarks/competitors/: imported_market_baselines.py
benchmarks/lerim_evidence/: integration.py  trace_ingestion_cost_performance.py
benchmarks/results/: market-sources.json  public-reports.json
benchmarks/results/reports/: context-budget-hybrid-full.md  extraction-minimax-m27-full-47.md  false-positive-extraction-minimax-m27-negative-cases.md  index.md  longmemeval-hybrid-full.md  longmemeval-lexical-full.md  mcp-integration-full.md  retrieval-latency-longmemeval.md  trace-ingestion-cost-longmemeval-s-sample.md
benchmarks/scripts/: build_report_index.py  generate_benchmark_summary_svg.py  run_imported_market_baselines.py  validate_public_artifacts.py
dashboard/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/analytics/: page.tsx
dashboard/app/clinic/: page.tsx
dashboard/app/context/: page.tsx
dashboard/app/context-graph/: page.tsx
dashboard/app/memory/: page.tsx
dashboard/app/operations/: page.tsx
dashboard/app/overview/: page.tsx
dashboard/app/settings/: page.tsx
dashboard/app/skills/: page.tsx
dashboard/app/traces/: page.tsx
dashboard/components/: GraphExplorer.tsx  LayoutShell.tsx  LiveStatus.tsx  LogViewer.tsx  OperationDetailModal.tsx  ProjectScope.tsx  RecordEditor.tsx  RecordList.tsx  RunViewerModal.tsx  SessionTable.tsx  Sidebar.tsx  StatsCard.tsx  TimeScope.tsx  Toast.tsx
dashboard/components/charts/: AgentDistributionChart.tsx  ChartWrapper.tsx  DailyMetricsChart.tsx  DailySessionsChart.tsx  HourlyActivityChart.tsx  MemoryTimelineChart.tsx  ModelUsageChart.tsx  ToolUsageChart.tsx
dashboard/lib/: api.ts  labels.ts  types.ts
dashboard/types/: cytoscape-fcose.d.ts
docs/: index.md  installation.md  quickstart.md  simple-coding-rules.md
docs/agents/: context-answerer.md  context-brief.md  context-curator.md  context-graph.md  trace-ingestion.md
docs/assets/: README.md
docs/benchmarks/: benchmark-suite.md  index.md  lerim-results.md  market-comparison.md
docs/cli/: answer.md  ask.md  auth.md  connect.md  context-brief.md  curate.md  daemon.md  dashboard.md  ingest.md  init.md  maintain.md  mcp.md  overview.md  project.md  query.md  queue.md  retry-skip.md  serve.md  skill.md  status.md  sync.md  trace.md  unscoped.md  up-down-logs.md  working-memory.md
docs/concepts/: business-workflows.md  capacity-and-slos.md  context-brief.md  context-model.md  context-records.md  how-it-works.md  ingest-curate.md  signal-packs.md  supported-agents.md  sync-maintain.md  working-memory.md
docs/configuration/: config-toml.md  model-roles.md  overview.md  tracing.md
docs/contributing/: getting-started.md
docs/examples/: index.md
docs/examples/traces/: compliance-review-run.jsonl  incident-agent-run.jsonl  research-analyst-run.jsonl  support-agent-run.jsonl
docs/guides/: agent-startup-context.md  compliance-demo.md  connecting-agents.md  custom-agents.md  custom-trace-folders.md  dashboard.md  evaluate-extraction-quality.md  incident-ops-demo.md  mcp-quickstart.md  querying-context.md  research-demo.md  submit-custom-agent-trace.md  support-ops-demo.md
docs/integrations/: index.md  openclaw.md  verification.md
docs/stylesheets/: extra.css
scripts/: hf-gguf-to-ollama.sh  redact_trace.py  release_preflight.py
src/lerim/: README.md  __init__.py  context_brief.py  mcp_server.py  working_memory.py
src/lerim/adapters/: base.py  claude.py  codex.py  cursor.py  opencode.py  registry.py
src/lerim/agents/: __init__.py  ask.py  baml_runtime.py  contracts.py  dspy_compat.py  extract.py  history_processors.py  maintain.py  mlflow_observability.py  model_helpers.py  model_runtime.py  model_settings.py  tools.py  toolsets.py  (+1 more)
tests/: README.md  conftest.py  helpers.py  live_helpers.py  run_tests.sh  test_config.toml
tests/e2e/: __init__.py  conftest.py  helpers.py  test_daemon_lifecycle.py  test_error_handling.py  test_learning_cycle.py  test_live_runtime_cycle.py  test_multi_project.py  test_setup_journey.py
tests/integration/: common_helpers.py  conftest.py  extract_helpers.py  test_extract_cases.py
tests/smoke/: __init__.py  conftest.py  test_answer_returns_answer.py  test_ask_returns_answer.py  test_curate_completes.py  test_embeddings_indexed.py  test_extract_completes.py  test_ingest_completes.py  test_maintain_completes.py  test_smoke.py
tests/unit/: conftest.py  test_api_functions.py  test_cli.py  test_context_brief.py  test_extract_single_pass.py  test_httpd_routes.py  test_mcp_server.py  test_runtime_orchestrator.py  test_tools.py  test_working_memory.py
(+426 files in other folders)
